--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -4,15 +4,17 @@
 page-user {
   .logo {
     padding: 20px 0;
-    min-height: 200px;
+    // min-height: 200px;
     text-align: center;
-
-    img {
-      max-width: 150px;
-    }
   }
 
   .list {
     margin-bottom: 0;
   }
+
+  .input_l{
+    border: 1px solid black;
+  }
+
+
 }
