--- a/src/pages/webrtc/webrtc.component.html
+++ b/src/pages/webrtc/webrtc.component.html
@@ -18,9 +18,9 @@
     <button ion-button (click)="end()" id="endButton" [disabled]="step!=6">结束</button>
   </div>
   <div>
-    <video #video id="localVideo" autoplay muted></video>
+    <video id="localVideo" autoplay muted></video>
   </div>
   <div>
-    <video #video2 id="remoteVideo" autoplay></video>
+    <video id="remoteVideo" autoplay></video>
   </div>
 </ion-content>
