--- a/src/pages/myvedio/myvedio.component.scss
+++ b/src/pages/myvedio/myvedio.component.scss
@@ -3,6 +3,11 @@
   border: 1px solid rgb(0, 0, 255);
 }
 
+#testVideo {
+  max-width: 40%;
+  border: 1px solid rgb(0, 255, 0);
+}
+
 #remoteVideo {
   max-width: 100%;
 }
