--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,4 +1,3 @@
-
 <!-- logged out menu -->
 <ion-menu id="loggedOutMenu" [content]="content">
 
@@ -10,7 +9,7 @@
 
   <ion-content class="outer-content">
 
-    <ion-list>
+    <!--<ion-list>
       <ion-list-header>
         Navigate
       </ion-list-header>
@@ -18,7 +17,7 @@
         <ion-icon item-left [name]="p.icon"></ion-icon>
         {{p.title}}
       </button>
-    </ion-list>
+    </ion-list>-->
 
     <ion-list>
       <ion-list-header>
