--- a/src/pages/voice/voice.component.html
+++ b/src/pages/voice/voice.component.html
@@ -1,13 +1,14 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
+    <ion-navbar>
+        <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>语音消息</ion-title>
-  </ion-navbar>
+        <ion-title>语音消息。。</ion-title>
+    </ion-navbar>
 </ion-header>
 <ion-content>
-  <div>
+    制作中- -
+    <!--<div>
     <button ion-button (click)="setStream()" id="setStreamButton" [disabled]="step!=0">1.setStream(本地视频流绑定)</button>
     <button ion-button (click)="Start()" id="startButton" [disabled]="step!=1">2.socket.io连接</button>
     <button ion-button (click)="Call()" id="callButton" [disabled]="step!=2">3.Call(业务层)</button>
@@ -27,6 +28,6 @@
   </div>
   <div>
     <audio id="localaudio" autoplay></audio>
-  </div>
+  </div>-->
 
 </ion-content>
