--- a/src/pages/myvedio/myvedio.component.html
+++ b/src/pages/myvedio/myvedio.component.html
@@ -1,34 +1,37 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
+    <ion-navbar>
+        <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>视频通话</ion-title>
-  </ion-navbar>
+        <ion-title>视频通话</ion-title>
+    </ion-navbar>
 </ion-header>
 <ion-content>
-  <button ion-button (click)="test()" id="testmsgButton">测试</button> {{msg}}
-  <template [ngIf]="!caller && userService.yourself.videoFree">
+    <button ion-button (click)="test()" id="testmsgButton">测试</button> {{msg}}
+    <template [ngIf]="!speaking && userService.yourself.videoFree">
     <div *ngFor="let user of userService.hList.userList">
-      <button ion-button *ngIf="user.socketId!=userService.yourself.socketId " class="btn btn-warning" (click)="call(user)" [disabled]="!(user.isOnline && user.videoFree)">{{user.name}}</button>
+      <button ion-button *ngIf="user.socketId!=userService.yourself.socketId " class="btn btn-warning" (click)="call(user)" [disabled]="!(user.isOnline && user.videoFree)" [hidden]="!user.isOnline">{{user.name}}</button>
     </div>
   </template>
 
-  <div>
-    <video id="localVideo" autoplay muted></video>
-  </div>
-  <div>
-    <!--<video id="remoteVideo" autoplay [src]="rtc.stream_r"></video>-->
-    <video id="remoteVideo" autoplay></video>
-  </div>
-  <div>
-    <video id="testVideo" autoplay muted></video>
-  </div>
+    <div [hidden]="!speaking">
+        <video id="localVideo" autoplay muted></video>
+    </div>
+    <div [hidden]="!speaking">
+        <!--<video id="remoteVideo" autoplay [src]="rtc.stream_r"></video>-->
+        <video id="remoteVideo" autoplay></video>
+    </div>
+    <div>
+        <video id="testVideo" autoplay muted></video>
+    </div>
 
-  <template [ngIf]="caller">
+    <template [ngIf]="needanswer">
     {{caller}}发来视频请求
     <button ion-button class="btn btn-warning" (click)="answer(true)">同意</button>
     <button ion-button class="btn btn-warning" (click)="answer(false)">挂断</button>
+  </template>
+    <template [ngIf]="speaking">
+    <button ion-button class="btn btn-warning" (click)="end()">结束通话</button>
   </template>
 
 </ion-content>
