键盘输入 测试

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,8 +1,11 @@
 // Styles for all of the user pages:
 // Login, Signup, Support
+$width: 150px;
 page-user {
     .logo {
         padding: 3px 0;
+        // width: 80vw;
+        // height: 80vw;
         // min-height: 200px;
         text-align: center;
     }
