--- a/src/pages/chat/chat.component.scss
+++ b/src/pages/chat/chat.component.scss
@@ -1,8 +1,12 @@
 #localVideo {
-  max-width: 40%;
-  border: 1px solid rgb(0, 0, 255);
+    max-width: 40%;
+    border: 1px solid rgb(0, 0, 255);
 }
 
 #remoteVideo {
-  max-width: 100%;
+    max-width: 100%;
+}
+
+.input-cover {
+    position: static;
 }
